# rust-auto-scaling-group-update-image

./: Cargo.toml
src/: main.rs
