[package]
name = "rust-auto-scaling-group-update-image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-autoscaling = "0.21.0"
clap = { version = "4.0.18", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
